添加getTabs, resize时改变content内容的高度

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -47,18 +47,18 @@ overflow:hidden;
   position: absolute;
   left: 200px;
   top: 71px;
-  bottom: 50%;
+  bottom: 30%;
   right: 0;
-  overflow: auto;
+  overflow: hidden;
 }
 
 #right-content-2{
   padding: 10px;
   position: absolute;
   left: 200px;
-  top: 50%;
+  top: 70%;
   bottom: 0;
   right: 0;
-  overflow: auto;
+  overflow: hidden;
 }
 
